2.1.0/_sources/gallery/userdemo/annotate_simple03.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_simple03.py:


=================
Annotate Simple03
=================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple03_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt


    fig, ax = plt.subplots(figsize=(3, 3))

    ann = ax.annotate("Test",
                      xy=(0.2, 0.2), xycoords='data',
                      xytext=(0.8, 0.8), textcoords='data',
                      size=20, va="center", ha="center",
                      bbox=dict(boxstyle="round4", fc="w"),
                      arrowprops=dict(arrowstyle="-|>",
                                      connectionstyle="arc3,rad=-0.2",
                                      fc="w"),
                      )

    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple03.py <annotate_simple03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple03.ipynb <annotate_simple03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
